# esci-evaluator

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: algolia.py  doofinder.py  shopify.py  utils.py
dataset/: fetch_products.py  fetch_queries.py
esci-s/: product_distribution.py
src/: fetch-category-queries.py  fetch_products.py  fetch_queries.py  logger.py  product_categories.py  product_config.py  product_distribution.py  utils.py  validate-product-images.py
src/dataset/: fetch_products.py  fetch_queries.py  product_distribution.py
src/evaluate/: evaluate_search_results.py
src/load/: algolia.py  doofinder.py  shopify.py
src/search/: algolia.py  doofinder.py  shopify.py
